<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.3</version>
	</parent>

	<groupId>no.nav.dokopp</groupId>
	<artifactId>dokopp</artifactId>
	<version>1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>app</module>
	</modules>

	<properties>
		<java.version>21</java.version>

		<camel.version>4.7.0</camel.version>
		<ibm.mq.client.version>9.4.0.5</ibm.mq.client.version>
		<logstash-logback-encode.version>8.0</logstash-logback-encode.version>
		<resilience4j.version>2.2.0</resilience4j.version>
		<cxf.version>4.0.5</cxf.version>
		<context-propagation.version>1.1.1</context-propagation.version>

		<opprettoppgave-tjenestespesifikasjon-v1.version>2-3843acc</opprettoppgave-tjenestespesifikasjon-v1.version>
		<arkiverdokumentproduksjon-tjenestespesifikasjon.version>6-e6ddb71</arkiverdokumentproduksjon-tjenestespesifikasjon.version>

		<!-- Test dependencies -->
		<spring-cloud-contract-wiremock.version>4.1.2</spring-cloud-contract-wiremock.version>

		<!-- plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-bom</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-bom</artifactId>
				<version>${cxf.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.ibm.mq</groupId>
				<artifactId>com.ibm.mq.jakarta.client</artifactId>
				<version>${ibm.mq.client.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.tjenester.brevogarkiv</groupId>
				<artifactId>arkiverdokumentproduksjon-tjenestespesifikasjon</artifactId>
				<version>${arkiverdokumentproduksjon-tjenestespesifikasjon.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.dok</groupId>
				<artifactId>opprettoppgave-tjenestespesifikasjon-v1</artifactId>
				<version>${opprettoppgave-tjenestespesifikasjon-v1.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot3</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encode.version}</version>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>context-propagation</artifactId>
				<version>${context-propagation.version}</version>
			</dependency>
			<!-- test -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-wiremock</artifactId>
				<version>${spring-cloud-contract-wiremock.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>